<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <DUT Name="E_Robot_Mitsubishi_States" Id="{8ec5b185-1c35-48cb-b69d-6f99461acd59}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE E_Robot_Mitsubishi_States :
(
	STATE_OPERATIONAL := 10,
	STATE_START_PROGRAM,
	STATE_WAIT_PROGRAM_COMPLETED,
	STATE_START_STOP,
	STATE_WAIT_STOP,
	STATE_STOPPED,
	STATE_SET_END,
	STATE_WAIT_SET_END,
	STATE_WAITING_RESET,
	STATE_START_RESET,
	STATE_WAITING_RESET_COMPLETED,
	STATE_START_POWER_ON,
	STATE_WAIT_POWERED_ON,
	STATE_START_POWER_OFF,
	STATE_WAIT_POWERED_OFF,
	STATE_REQUEST_DEPENDENCY_CONFIRMATION,
	STATE_WAIT_DEPENDENCY_CONFIRMATION,
	STATE_START_TARGET_SPEED_OVERRIDE_CHANGE,
	STATE_START_TARGET_TRAYPOS_CHANGE,
	STATE_START_TARGET_PROGRAM_CHANGE,
	STATE_START_TARGET_PROGRAM,
	STATE_WAIT_PROGRAM_STARTED,
	STATE_TOGGLE_GRIPERA,
	STATE_TOGGLE_GRIPERB,
	STATE_ERROR_ROBOT,
	STATE_ERROR_STATE_MACHINE := 100
)DINT;
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>