<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.2">
  <DUT Name="ST_Robot_Mitsubishi" Id="{ebc3f03c-3c03-43b5-9250-4e36a23157c2}">
    <Declaration><![CDATA[TYPE ST_Robot_Mitsubishi :
STRUCT
// INPUTS 	
	bReady							: BOOL;															// Is the robot ready for operation.
	bBusy							: BOOL;															// Is the robot operating.
	bError							: BOOL;															// Is the robot in an error state.
	bDisabled						: BOOL;															// Is the robot in a disabled state.	
	bPoweredOn						: BOOL;															// Is the robot powered on.
	bAutomaticMode					: BOOL;															// Is the robot in automatic mode - can work.
	bExecuting						: BOOL;															// Is the robot executing - in a cycle/program.
	bEnding							: BOOL;															// Is the robot ending a cycle/program.
	bProgramCompleted				: BOOL;															// Is the last started program completed.	
	bOnline							: BOOL;															// Is the TCP IP communication to the robot active.
	bGripperAPresent				: BOOL;
	bGripperBPresent				: BOOL;
// Statuses
	nCurrentState					: E_Robot_Mitsubishi_States;									// The current robot state ID if defined.
	nLastState						: E_Robot_Mitsubishi_States;									// The previous state of the robot.
	nLastErrorState					: E_Robot_Mitsubishi_States;									// The last state where an error had occured.
	nDependencyState				: DINT;															// The dependency state of the robot.
	nCurrentProgram					: DINT;															// The current robot program.
	nCurrentTrayPosition			: DINT;															// The current station to work with.
	nCurrentSpeed					: DINT;															// The current speed overdive.
	nCurrentCorrectionID			: DINT;															// The current correction ID if selected.
	nCurrentProductID				: DINT;
	nCurrentTargetProgram			: DINT;															// The target robot program.
	nCurrentTargetTrayPosition		: DINT;															// The target station to work with.
	nCurrentTargetSpeed				: DINT;															// The target speed overdive.
	nCurrentTargetCorrectionID		: DINT;															// The target correction ID if set.
	nCurrentTargetProductID			: DINT;
	
	nLastReceivedPacketID			: DINT;															// The ID of the last packet received.
	bLastPacketConfirmed			: BOOL;		// Not Used													// Had the last sent packet been confirmed.
	
	// OUTPUTS
// Control
	bDoReset						: BOOL;															// Reset the robot controller.+
	bDoServoOn						: BOOL;															// Enable the robot controller.
	bDoServoOff						: BOOL;															// Disable the robot controller.
	bDoStepFwd						: BOOL;															// Execute next step if in step mode.
	bDoStepBwd						: BOOL;															// Return to the previous step if in step mode.
	bDoEnd							: BOOL;															// End the current program.
	bDoStop							: BOOL;															// Stop the currently selected program if executing.
	bDoStart						: BOOL;															// Start the currently selected program.
	bDoOpenGripperA					: BOOL;
	bDoCloseGripperA				: BOOL;
	bDoOpenGripperB					: BOOL;
	bDoCloseGripperB				: BOOL;														
	bDoStartProgram					: BOOL;
	bDoChangeTargetTrayPosition		: BOOL;															// Change the target station.
	bDoChangeTargetProgram			: BOOL;															// Change the target program.
	bDoChangeTargetSpeed			: BOOL;															// Change the target speed - direct.
	bDoChangeTargetCorrection		: BOOL;															// Change the target correction.
	bDoChangeTargetProductID		: BOOL;															// Change the target product ID.
	bDoConfirmDependency			: BOOL;															// Confirm the dependency state.
	bToggleEnable					: BOOL;		//Not Used												// Use to enable operation of the state machine.
	bToggleConnect					: BOOL;															// Use to start/stop the socket communication.
	
// Settings
	nTargetTrayPosition				: DINT;															// The station of interest to be worked with.
	nTargetProgram					: DINT;															// The program to be executed.
	nTargetSpeed					: DINT;															// The speed overdrive to be set.
	nTargetCorrectionID				: DINT;															// The target correction id.
	nLastSentPacketID				: DINT;		// Not Used													// The id of the last sent packet to the robot.
	
	sRobotAddress					: T_IPv4Addr;														// The IPv4 address of the robot server.
	nRobotPort						: UDINT;														// The port of the robot server.
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>